<resources>
    <string name="app_name">料理中国</string>
    <string name="preUser">账户:</string>
    <string name="password">密码:</string>
    <string name="size1">18dp</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="back">返回</string>
    <string name="confirm">确认:</string>
    <string name="user_hint">请输入用户名</string>
    <string name="password_hint">请输入密码</string>
    <string name="password_check_hint">请再次输入密码</string>
    <string name="login_toast">登录成功！</string>
    <string name="register_toast">注册失败！</string>
    <string name="wrong_password">密码错误！</string>
    <string name="null_username">用户名不存在！</string>
    <string name="reg_success">注册成功！</string>
    <string name="password_dif">密码不一致！</string>
    <string name="same_username">用户名已存在！</string>
    <string name="mission">任务</string>
    <string name="compound">合成</string>
    <string name="materials">食材</string>
    <string name="friends">好友</string>
    <string name="menu">菜单</string>
    <string name="recipe">食谱</string>
    <string name="search">搜索</string>
    <string name="recipe_title_label">食谱名称</string>
    <string name="recipe_detail_label">所需材料</string>
    <string name="recipe_num_label">拥有数量</string>
    <string name="recipe_having_num">拥有数量:</string>
    <string name="mission_award">任务奖励:</string>
    <string name="need_food">所需料理:</string>
    <string name="accept">接受</string>
    <string name="cancel">取消</string>
    <string name="distance">距离:</string>
    <string name="nothing">无</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="hint">提示</string>
    <string name="ask_mission_cancel_message">你确定要取消这一任务吗？</string>
    <string name="mission_accept">已接受任务</string>
    <string name="mission_cancel">已取消任务</string>
    <string name="exp">经验值</string>
    <string name="money">元宝</string>
    <string name="allMaterial">所有食材</string>
    <string name="NotEnoughMaterial">食材不足！</string>
    <string name="NotCompleteTable">请填写完整！</string>
</resources>
