<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.baidu.mapapi.map.MapView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mapView"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:clickable="true"
        android:focusable="true">
    </com.baidu.mapapi.map.MapView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">
        <Button
            android:id="@+id/search_button"
            android:background="@drawable/btn_circle"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginBottom="24dp"
            android:textSize="20sp"
            android:text="@string/search">
        </Button>
        <Button
            android:id="@+id/recipe_button"
            android:background="@drawable/btn_circle"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginBottom="24dp"
            android:textSize="20sp"
            android:text="@string/recipe">
        </Button>
        <Button
            android:id="@+id/mission_button"
            android:background="@drawable/btn_circle"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="24dp"
            android:textSize="20sp"
            android:text="@string/mission">
        </Button>
    </LinearLayout>
</FrameLayout>