<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:background="@drawable/item_border">

    <Button
        android:id="@+id/list_item_mission_accept_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@drawable/btn_circle"
        android:text="@string/accept" />
    <TextView
        android:id="@+id/list_item_mission_title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/list_item_mission_accept_button"
        android:textStyle="bold"
        android:padding="4dp"
        android:layout_marginLeft="8dp"
        tools:text="Mission Title"/>

    <TextView
        android:id="@+id/list_item_mission_distance_text_view_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/list_item_mission_title_text_view"
        android:textStyle="bold"
        android:padding="4dp"
        android:layout_marginLeft="8dp"
        android:text="@string/distance"/>
    <TextView
        android:id="@+id/list_item_mission_distance_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/list_item_mission_title_text_view"
        android:layout_toRightOf="@id/list_item_mission_distance_text_view_hint"
        android:textStyle="bold"
        android:padding="4dp"
        tools:text="Num"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/list_item_mission_need_food_text_view_hint"
        android:layout_below="@id/list_item_mission_distance_text_view"
        android:textStyle="bold"
        android:padding="4dp"
        android:layout_marginLeft="8dp"
        android:text="@string/need_food"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/list_item_mission_need_food_text_view"
        android:layout_below="@id/list_item_mission_distance_text_view"
        android:layout_toRightOf="@id/list_item_mission_need_food_text_view_hint"
        android:textStyle="bold"
        android:padding="4dp"
        android:layout_marginLeft="8dp"
        tools:text="Name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/list_item_mission_award_text_view_hint"
        android:layout_below="@id/list_item_mission_need_food_text_view_hint"
        android:textStyle="bold"
        android:padding="4dp"
        android:layout_marginLeft="8dp"
        android:text="@string/mission_award"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/list_item_mission_award_text_view"
        android:layout_below="@id/list_item_mission_need_food_text_view_hint"
        android:layout_toRightOf="@id/list_item_mission_award_text_view_hint"
        android:textStyle="bold"
        android:padding="4dp"
        android:layout_marginLeft="8dp"
        android:lineSpacingMultiplier="1.5"
        tools:text="Thing"/>
</RelativeLayout>